# vape-tomagatchi

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.c  tomagatchi.c
src/include/: FreeRTOSConfig.h  main.h  tomagatchi.h
